--- a/application/Spt_App/package.json
+++ b/application/Spt_App/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.74.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-searchbar": "^1.16.0",
