--- a/application/Spt_App/package.json
+++ b/application/Spt_App/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
     "expo": "~51.0.13",
+    "expo-mail-composer": "^13.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
