--- a/application/Spt_App/package.json
+++ b/application/Spt_App/package.json
@@ -19,6 +19,7 @@
     "expo": "~51.0.13",
     "expo-mail-composer": "^13.0.1",
     "expo-status-bar": "~1.12.1",
+    "nodemailer": "^6.9.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
